tests/snapshots/run_wpt_conformance__litert_reduceMax_float16_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_max.https.any.js reduceMax float16 0D tensor empty axes, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceMax { input: 0, options: Some(MLReduceOptions { label: "", axes: Some([]), keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMaxInput: f16[];
  }

  nodes {
    [reduceMaxOutput] = reduceMax(reduceMaxInput, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceMaxOutput; }
}
