tests/snapshots/run_wpt_conformance__litert_reduceMax_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_max.https.any.js reduceMax float16 1D constant tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceMax { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([5, 80, 167, 85, 150, 206, 38, 199, 190, 84, 7, 210, 163, 210, 43, 84, 3, 214, 133, 213, 240, 85, 169, 80, 71, 209, 9, 86, 12, 59, 208, 83, 149, 80, 60, 86, 142, 212, 193, 209, 16, 77, 100, 205, 105, 210, 83, 209]);
  }

  nodes {
    [reduceMaxOutput] = reduceMax(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMaxOutput; }
}
